--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "4.1.3",
     "@material-ui/icons": "4.2.1",
     "firebase": "6.2.4",
+    "lodash.template": "^4.5.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.0.1",
